[package]
name = "bambixploit"
version = "0.1.0"
authors = ["Benedikt Radtke <benediktradtke@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
regex = "1"

[target.'cfg(windows)'.dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }

[target.'cfg(unix)'.dependencies]
termion="*"
tui = { version = "0.15" }
